--- a/mtl-prelude.cabal
+++ b/mtl-prelude.cabal
@@ -1,7 +1,7 @@
 name:
   mtl-prelude
 version:
-  0.1.0
+  1.0.0
 synopsis:
   Reexports of most definitions from "mtl" and "transformers" 
 description:
@@ -12,6 +12,10 @@ description:
   .
   In combination with the <http://hackage.haskell.org/package/base-prelude "base-prelude"> library,
   this should give you a quite rich prelude.
+  .
+  The @1.*@ versions are restricted by 
+  the feature set of @mtl == 2.0.*@ and @transformers == 0.2.*@, 
+  however they provide support for newer versions of those libraries as well.
 category:
   Prelude
 homepage:
@@ -48,8 +52,8 @@ library
   exposed-modules:
     MTLPrelude
   build-depends:
-    transformers == 0.4.*,
-    mtl == 2.2.*
+    transformers >= 0.2 && < 0.5,
+    mtl >= 2.0 && < 2.3
   default-extensions:
     Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
   default-language:
