--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ ghc:
   - 7.6
   - 7.8
 
+env:
+  - mtl=2.2.* transformers=0.4.*
+  
 install:
+  - cabal install "mtl == $mtl"
+  - cabal install "transformers == $transformers"
   - cabal install --only-dependencies --enable-tests --enable-benchmarks --force-reinstalls
 
