--- a/mtl-prelude.cabal
+++ b/mtl-prelude.cabal
@@ -1,7 +1,7 @@
 name:
   mtl-prelude
 version:
-  2.0.0
+  2.0.1
 synopsis:
   Reexports of most definitions from "mtl" and "transformers" 
 description:
@@ -54,6 +54,6 @@ library
     transformers == 0.4.*,
     mtl == 2.2.*
   default-extensions:
-    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
+    NoImplicitPrelude
   default-language:
     Haskell2010
