--- a/mtl-prelude.cabal
+++ b/mtl-prelude.cabal
@@ -13,7 +13,7 @@ description:
   In combination with the <http://hackage.haskell.org/package/base-prelude "base-prelude"> library,
   this should give you a quite rich prelude.
   .
-  The @2.*@ versions are are restricted by 
+  The @2.*@ versions are restricted by 
   the feature set of @mtl == 2.2.*@ and @transformers == 0.4.*@.
 category:
   Prelude
