--- a/mtl-prelude.cabal
+++ b/mtl-prelude.cabal
@@ -14,7 +14,8 @@ description:
   this should give you a quite rich prelude.
   .
   The @2.*@ versions are restricted by 
-  the feature set of @mtl-2.2@ and @transformers-0.4@.
+  the feature set of @mtl-2.2@ and @transformers-0.4@,
+  however they provide support for newer versions of those libraries as well.
 category:
   Prelude
 homepage:
