--- a/mtl-prelude.cabal
+++ b/mtl-prelude.cabal
@@ -52,8 +52,8 @@ library
   exposed-modules:
     MTLPrelude
   build-depends:
-    transformers >= 0.4 && < 0.6,
-    mtl == 2.2.*,
+    transformers >= 0.4 && < 0.7,
+    mtl >= 2.2 && < 2.4,
     base < 5
   default-extensions:
     NoImplicitPrelude
